--- a/01_Customers_say/01_00_redsalud/00_redsalud_Customers_say.html
+++ b/01_Customers_say/01_00_redsalud/00_redsalud_Customers_say.html
@@ -815,7 +815,7 @@
     // DATOS DEL JSON
     // ==========================================================
   
-    const PANEL_JSON_URL = "../01_00_redsalud/00_redsalud_Customers_say.json";
+    const PANEL_JSON_URL = "C:/Users/Ariel/OneDrive/Documentos/GitHub/cxdip.com/01_Customers_say/01_00_redsalud/00_redsalud_Customers_say.json";
   
     let panelData = null;
     let selectedYear = null;
