--- a/01_Customers_say/01_00_redsalud/00_redsalud_Customers_say.html
+++ b/01_Customers_say/01_00_redsalud/00_redsalud_Customers_say.html
@@ -465,19 +465,22 @@
       <div class="summary-grid">
         <div class="summary-card">
           <div class="summary-label">Total de respuestas</div>
-          <div class="summary-value" id="sum-total-resp">–</div>
+          <div class="summary-value" id="summary-total">–</div>
         </div>
         <div class="summary-card">
           <div class="summary-label">Respuestas con comentario</div>
-          <div class="summary-value" id="sum-total-com">–</div>
-          <div class="summary-foot" id="sum-pct-text">–</div>
+          <div class="summary-value" id="summary-with-text">–</div>
+          <div class="summary-foot" id="summary-text-pct">–</div>
         </div>
         <div class="summary-card">
-          <div class="summary-label">CSAT global (texto)</div>
-          <div class="summary-value" id="sum-csat-global">–</div>
-          <div class="summary-foot">Escala 1–5 · sólo casos con comentario</div>
+          <div class="summary-label">IBB global (texto)</div>
+          <div class="summary-value" id="summary-ibb">–</div>
+          <div class="summary-foot">
+            (% promotores – % detractores) · sólo casos con comentario
+          </div>
         </div>
       </div>
+      
     </header>
 
     <!-- DRIVERS MACRO -->
