--- a/brochure/firma.html
+++ b/brochure/firma.html
@@ -22,8 +22,8 @@
             </p>
             
             <p style="margin: 0; font-size: 12px; color: #555555;">
-                Teléfono: <a href="tel:[Tu Número]" style="color: #555555; text-decoration: none;">[988536769]</a> | 
-                Web: <a href="https://assistance.cdip.com/portal/en/home" target="_blank" style="color: #007bff; text-decoration: none;">WWW.cxdip.com</a>
+                Teléfono: <a href="tel:[Tu Número]" style="color: #555555; text-decoration: none;">[+56 9 8853 6769]</a> | 
+                Web: <a href="https://WWW.CXDIP.COM" target="_blank" style="color: #007bff; text-decoration: none;">cxdip.com</a>
             </p>
             
             <p style="margin-top: 5px; font-size: 12px;">
