--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <title>CXDIP — Paneles On Line de lealtad y satisfacción, sucursales y ventas</title>
+  <title>CXDIP — Boutique de experiencias</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
     :root {
@@ -1073,14 +1073,14 @@
     <div class="container header-inner">
       <div class="logo-block">
         <div class="logo">CXDIP</div>
-        <div class="logo-sub">Paneles · CX · Operación</div>
+        <div class="logo-sub">Somos tu socio Boutique de experiencia</div>
       </div>
       <nav>
         <ul>
           <li><a href="#inicio">Inicio</a></li>
-          <li><a href="#paneles">Paneles</a></li>
-          <li><a href="#como">Cómo funciona</a></li>
-          <li><a href="#por-que">Por qué CXDIP</a></li>
+          <li><a href="#paneles">Servicios</a></li>
+          <li><a href="#como">Cómo trabajamos</a></li>
+          <li><a href="#por-que">Por qué elegirnos</a></li>
           <li>
             <button class="btn-primary" type="button">
               Agenda una demo
