--- a/index.html
+++ b/index.html
@@ -1073,14 +1073,14 @@
     <div class="container header-inner">
       <div class="logo-block">
         <div class="logo">CXDIP</div>
-        <div class="logo-sub">Somos tu socio Boutique de experiencia</div>
+        <div class="logo-sub">Somos tu partner Boutique de experiencias</div>
       </div>
       <nav>
         <ul>
           <li><a href="#inicio">Inicio</a></li>
           <li><a href="#paneles">Servicios</a></li>
-          <li><a href="#como">Cómo trabajamos</a></li>
-          <li><a href="#por-que">Por qué elegirnos</a></li>
+          <li><a href="#como">¿Cómo trabajamos?</a></li>
+          <li><a href="#por-que">¿Por qué elegirnos?</a></li>
           <li>
             <button class="btn-primary" type="button">
               Agenda una demo
@@ -1101,17 +1101,17 @@
             <!-- <div class="hero-badge">Apoyamos la toma de decisiones</div>-->
           </div>
           <h1 class="hero-title">
-            <span>CXDIP</span> conecta CX, sucursales y ventas en un solo panel.
+            <span>CXDIP</span> generamos sistemas GX gestionables a medida
           </h1>
           <p class="hero-subtitle">
-            Una vista limpia y <strong>profunda</strong> de alta dirección. Combina: operaciones y CX con un mismo idioma y en tiempo real con vista Mobile.
+           Vistas eficientes, <strong>profundas</strong> de alto impacto. Donde conviertes la voz de clientes en sistemas gestionables y rentabilizables.
           </p>
           <div class="hero-tags">
-            <span class="hero-tag">CX &amp; Loyalty</span>
-            <span class="hero-tag">Locales/sucursales</span>
-            <span class="hero-tag">Fuerza de venta</span>
-            <span class="hero-tag">Gestión de filas</span>
-            <span class="hero-tag">Journey maps</span>
+            <span class="hero-tag">Diseño CX &amp; Loyalty</span>
+            <span class="hero-tag">Confección eficiente de encuestas</span>
+            <span class="hero-tag">Hasta 3.600 respuestas anuales</span>
+            <span class="hero-tag">Retabilizamos tu gestión</span>
+            <span class="hero-tag">Web & Mobile listo para comité</span>
           </div>
 
           <div class="hero-cta-row">
