--- a/index.html
+++ b/index.html
@@ -1101,7 +1101,7 @@
             <!-- <div class="hero-badge">Apoyamos la toma de decisiones</div>-->
           </div>
           <h1 class="hero-title">
-            <span>CXDIP</span> generamos sistemas GX gestionables a medida
+            <span>CXDIP</span> generamos sistemas CX gestionables a medida
           </h1>
           <p class="hero-subtitle">
            Vistas eficientes, <strong>profundas</strong> de alto impacto. Donde conviertes la voz de clientes en sistemas gestionables y rentabilizables.
@@ -1121,20 +1121,20 @@
           </div>
 
           <div class="hero-note">
-          Da el paso a una vista eficiente, que te permita gestionar y controlar
+          20 minutos. Sin compromiso. Con tus preguntas sobre la mesa.
           </div>
         </div>
 
         <div class="hero-right">
           <div class="hero-device">
             <div class="hero-device-top">
-              <div class="hero-device-logo">CXDIP · Panel unificado</div>
+              <div class="hero-device-logo">CXDIP · Loyalty 360°</div>
               <div class="hero-device-pill">Ejemplo de vista</div>
             </div>
             <div class="hero-device-screen">
               <div class="device-metrics-row">
                 <div class="device-metric">
-                  <div class="device-metric-label">NPS total</div>
+                  <div class="device-metric-label">CSat total</div>
                   <div class="device-metric-value">+54</div>
                 </div>
                 <div class="device-metric">
