--- a/index.html
+++ b/index.html
@@ -1112,6 +1112,8 @@
             <span class="hero-tag">Hasta 3.600 respuestas anuales</span>
             <span class="hero-tag">Retabilizamos tu gestión</span>
             <span class="hero-tag">Web & Mobile listo para comité</span>
+            <span class="hero-tag">Gestiona con Close the loop</span>
+             <span class="hero-tag">Pasa de las ppt olvidadas, a la acción</span>
           </div>
 
           <div class="hero-cta-row">
@@ -1176,7 +1178,7 @@
     <section class="trust-strip">
       <div class="container trust-inner">
         <div>
-          Diseñado para compañías de <strong>servicios y retails</strong> que quieren llevar la gestión del CX al siguiente nivel.
+          Diseñado para compañías de <strong>servicios y retails</strong> que quieren llevar la gestión real del CX al siguiente nivel.
         </div>
         <div class="trust-tags">
           <span class="tag-pill">Banca &amp; Finanzas</span>
