--- a/index.html
+++ b/index.html
@@ -1108,12 +1108,9 @@
           </p>
           <div class="hero-tags">
             <span class="hero-tag">Diseño CX &amp; Loyalty</span>
-            <span class="hero-tag">Confección eficiente de encuestas</span>
-            <span class="hero-tag">Hasta 3.600 respuestas anuales</span>
-            <span class="hero-tag">Retabilizamos tu gestión</span>
-            <span class="hero-tag">Web & Mobile listo para comité</span>
-            <span class="hero-tag">Gestiona con Close the loop</span>
-             <span class="hero-tag">Pasa de las ppt olvidadas, a la acción</span>
+            <span class="hero-tag">Desde 3.600 respuestas anuales</span>
+            <span class="hero-tag">Retabilizamos toda gestión CX</span>
+            <span class="hero-tag">Paneles Web & Mobile listos para comité</span>
           </div>
 
           <div class="hero-cta-row">
@@ -1195,16 +1192,16 @@
     <section id="paneles">
       <div class="container">
         <div class="section-heading">
-          <h2 class="section-title">Diversos paneles, una sola historia</h2>
+          <h2 class="section-title">Diversos productos, una sola historia</h2>
           <p class="section-subtitle">
-            Puedes partir con uno y luego sumar los demás. Cada panel es una vista concreta, no un proyecto interminable.
+           Soluciones en un solo ecosistema: Completo, eficiente y personalizado
           </p>
         </div>
 
         <div class="panel-gallery">
           <!-- PANEL 1: NPS -->
           <div class="panel-card">
-            <h3 class="panel-title">Panel CX Loyalty</h3>
+            <h3 class="panel-title">DIP Loyalty</h3>
             <div class="panel-mockup panel-mockup--nps">
               <div class="nps-chart">
                 <div class="nps-axis-x"></div>
@@ -1256,7 +1253,7 @@
 
           <!-- PANEL 2: DETALLE CX -->
           <div class="panel-card">
-            <h3 class="panel-title">Panel detalle CX</h3>
+            <h3 class="panel-title">DIP Loyalty 360°</h3>
             <div class="panel-mockup panel-mockup--map">
               <div class="map-area">
                 <div class="map-grid"></div>
@@ -1318,7 +1315,7 @@
 
           <!-- PANEL 3: OPS & SALES -->
           <div class="panel-card">
-            <h3 class="panel-title">Panel CX: OPs &amp; Sales</h3>
+            <h3 class="panel-title">Panel XM: OPs &amp; Sales</h3>
             <div class="panel-mockup panel-mockup--ops">
               <div class="report-scroll">
                 <div class="report-lines">
@@ -1367,18 +1364,19 @@
     <section id="como" style="background: var(--bg-alt);">
       <div class="container">
         <div class="section-heading">
-          <h2 class="section-title">¿Cómo funciona CXDIP?</h2>
+          <h2 class="section-title">Un sistema paquetizado de lealtad</h2>
           <p class="section-subtitle">
-            Tres pasos claros, sin sobrecargar a tus equipos.
+            Todo lo que necesitas para medir, entender y gestionar la experiencia.
           </p>
         </div>
 
         <div class="steps">
           <div class="step-card">
-            <div class="step-number">01 · Generamos &amp; Conectamos la data</div>
-            <h3 class="step-title">Implementamos CX Loyalty y conectamos lo que tienes</h3>
+            <div class="step-number">01 · Estatus &amp; Diseño</div>
+            <h3 class="step-title">Cuestionario & modelo de datos</h3>
             <p class="step-text">
-              Creamos encuestas, te apoyamos con reclamos, ventas y datos básicos de operación. No necesitas una revolución tecnológica.
+              Encuestas optimizadas, escalas claras y maquetados con tu marca.
+              Definición de segmentos, cabales y variables claves.
             </p>
           </div>
           <div class="step-card">
