--- a/index.html
+++ b/index.html
@@ -1192,9 +1192,9 @@
     <section id="paneles">
       <div class="container">
         <div class="section-heading">
-          <h2 class="section-title">Diversos productos, una sola historia</h2>
+          <h2 class="section-title">Diverdad soluciones, que se ajustan a tus necesidades</h2>
           <p class="section-subtitle">
-           Soluciones en un solo ecosistema: Completo, eficiente y personalizado
+           En un solo ecosistema: Completo, eficiente y personalizado.
           </p>
         </div>
 
