--- a/index.html
+++ b/index.html
@@ -1097,7 +1097,7 @@
       <div class="container hero-inner">
         <div>
           <div class="hero-kicker-row">
-            <div class="hero-kicker">Paneles on line</div>
+           <!-- <div class="hero-kicker">Paneles on line</div>
             <!-- <div class="hero-badge">Apoyamos la toma de decisiones</div>-->
           </div>
           <h1 class="hero-title">
