--- a/index.html
+++ b/index.html
@@ -1192,7 +1192,7 @@
     <section id="paneles">
       <div class="container">
         <div class="section-heading">
-          <h2 class="section-title">Diverdad soluciones, que se ajustan a tus necesidades</h2>
+          <h2 class="section-title">Variedad en soluciones, que se ajustan a tus necesidades</h2>
           <p class="section-subtitle">
            En un solo ecosistema: Completo, eficiente y personalizado.
           </p>
