--- a/index.html
+++ b/index.html
@@ -1380,17 +1380,18 @@
             </p>
           </div>
           <div class="step-card">
-            <div class="step-number">02 · Diseñamos el panel</div>
-            <h3 class="step-title">Elegimos pocos indicadores</h3>
+            <div class="step-number">02 · Plataforma</div>
+            <h3 class="step-title">Panel Web & Mobile</h3>
             <p class="step-text">
-              Definimos métricas clave para dirección, operaciones y CX, en una vista que se entiende en 1 minuto.
+              Desde 3.600 respuestas anuales.
+              Vistas simples y gestionables a través de Drivers claves.
             </p>
           </div>
           <div class="step-card">
-            <div class="step-number">03 · Instalamos la rutina</div>
-            <h3 class="step-title">Reuniones cortas, foco claro</h3>
+            <div class="step-number">03 · Acompañamiento</div>
+            <h3 class="step-title">Informes ejecutivos</h3>
             <p class="step-text">
-              Acompañamos las primeras sesiones y dejamos instalado un ritmo de gestión de 30–90 días.
+              No te soltamos la mano. Construimos informes para que brilles en tus presentaciones.
             </p>
           </div>
         </div>
